# procedure_companion

./: .gitignore  README.md  WRITEUP.md
backend/: .env.example  app.py  config.py  pyproject.toml  tavus_setup.py
backend/data/: egg_freezing_overview.txt  ohss_guidelines.txt  post_retrieval_instructions.txt  pre_procedure_guidelines.txt
backend/db/: connection.py  schema.sql
backend/models/: schemas.py
backend/routers/: conversations.py  webhooks.py
backend/services/: sse.py  summarizer.py  tavus.py  webhook_processor.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.tsx  index.css
frontend/src/components/: CallClinicButton.tsx  EmotionBadge.tsx  EmotionIndicator.tsx  EscalationToast.tsx  QuestionList.tsx  StatusBadge.tsx  SummaryCard.tsx  TopicTag.tsx  VideoTile.tsx
frontend/src/hooks/: useConversationStream.ts  useDailySession.ts
frontend/src/pages/: LandingPage.tsx  SessionPage.tsx  SummaryPage.tsx
frontend/src/services/: api.ts
frontend/src/types/: index.ts
frontend/your-procedure-guide/: index.html  package-lock.json  package.json
