[project]
name = "procedure-companion"
version = "0.1.0"
description = ""
authors = [
    {name = "Angela Lu", email = "xlu92427@gmail.com"}
]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.129.0,<0.130.0",
    "uvicorn>=0.41.0,<0.42.0",
    "psycopg2-binary>=2.9.11,<3.0.0",
    "python-dotenv>=1.2.1,<2.0.0",
    "httpx>=0.28.0,<0.29.0",
    "python-multipart>=0.0.20,<0.1.0",
]
